toggler and migration of styles essentially done

--- a/examples/site/widget_list.html
+++ b/examples/site/widget_list.html
@@ -8,9 +8,9 @@ widget_selected: selected
 
 <div class="wrapper">
   <h1>Widgets</h1>
-  <div data-ur-set="toggler">
-    <h2 data-ur-toggler-component="button">What is a Widget?</h2>
-    <div data-ur-toggler-component="content">
+  <div>
+    <h2>What is a Widget?</h2>
+    <div>
       <p>
         Uranium is a group of widgets - but what <i>is</i> a widget, exactly? In Uranium, a widget is a behavior that you're assigning to HTML elements
         on a page. It's a group of <i>attributes</i> you give to your HTML, allowing it to perform
@@ -35,6 +35,7 @@ widget_selected: selected
   <div id="widget_detail">
     <h2>Widgets Included in Uranium</h2>
     <ul>
+      
       <li> <a href="{{site.url}}toggler.html"> Toggler </a> </li>
       <li> <a href="{{site.url}}tabs.html"> Tabs </a> </li>
       <li> <a href="{{site.url}}carousel.html"> Carousel </a> </li>
@@ -44,6 +45,19 @@ widget_selected: selected
       <li> <a href="{{site.url}}font_resizer.html"> Font Resizer </a> </li>
       <li> <a href="{{site.url}}maps.html"> Maps </a> </li>
       <li> <a href="{{site.url}}geocode.html"> Geocode </a> </li>
+      
+      <li> <a href="{{site.url}}carousel_examples.html"> Carousel </a> </li>
+      <li> <a href="{{site.url}}font_resizer_examples.html"> Font Resizer </a> </li>
+      <li> <a href="{{site.url}}geocode.html"> Reverse Geocode </a></li>
+      <li> <a href="{{site.url}}lateload.html"> Lateload </a></li>
+      <li> <a href="{{site.url}}map_examples.html"> Map </a></li>
+      <li> <a href="{{site.url}}select_buttons.html"> Select Buttons </a></li>
+      <li> <a href="{{site.url}}select_list_examples.html"> Select Lists </a> </li>
+      <li> <a href="{{site.url}}swipe_toggle.html"> Swipe Toggle</a></li>
+      <li> <a href="{{site.url}}table/table.html"> Flex Table </a> </li>
+      <li> <a href="{{site.url}}tabs/tabs.html"> Tabs </a> </li>
+      <li> <a href="{{site.url}}/widgets/toggler.html"> Toggler </a> </li>
+      <li> <a href="{{site.url}}zoom_preview_examples.html"> Zoom Preview </a> </li>
     </ul>
   </div>
   
