--- a/examples/correct/widget_list.html
+++ b/examples/correct/widget_list.html
@@ -1,4 +1,7 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!-- Deprecated in favor of the jekyll template page -->
+
+
+<!-- <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
   <head>
     <title>Widget List</title>
@@ -24,4 +27,4 @@
       </ol>
     </div>
   </body>
-</html>
+</html> -->
