--- a/examples/site/toggler.html
+++ b/examples/site/toggler.html
@@ -43,14 +43,14 @@ widget_selected: selected
         <div class="components">
           <ul>
             <li><div data-ur-toggler-component="button" class="inline_code">"button"</div>
-              <ul data-ur-toggler-component="content">
+              <ul>
                 <li>add this attribute to the button (i.e. the thing to be clicked)</li>
                 <li>multiple?: false</li>
                 <li>state: enabled / disabled(default)</li>
               </ul>
             </li>
             <li><div data-ur-toggler-component="button" class="inline_code">"content"</div>
-              <ul data-ur-toggler-component="content">
+              <ul>
                 <li>add this attribute to each content item</li>
                 <li>multiple?: true</li>
                 <li>state: enabled / disabled(default)</li>
@@ -61,6 +61,34 @@ widget_selected: selected
       </div> <!-- advanced tab-->
     </div> <!-- tabs widget -->
   </div><!-- wrapper -->
+  <div class='wrapper'>
+    <h2> Required Styles </h2>
+    <div class='content'>
+      <pre>
+        /* Required SCSS Styling */
+
+        *[data-ur-set='toggler'] {
+          /* By Default content is hidden*/
+          *[data-ur-toggler-component='content'] {
+            display:none;
+          }
+          *[data-ur-toggler-component='content'][data-ur-state='enabled'] {
+            display: block;
+          }
+        }
+      </pre>
+      <pre>
+        /* Required CSS Styling */
+
+        *[data-ur-set='toggler'] *[data-ur-toggler-component='content'] {
+          display:none;
+        }
+        *[data-ur-set='toggler'] *[data-ur-toggler-component='content'][data-ur-state='enabled'] {
+          display: block;
+        }
+      </pre>      
+    </div>
+  </div>
   <div class="wrapper">
     <h2>Demonstration</h2>
     <div class='demonstration' name='Simple'>
