--- a/examples/site/widget_list.html
+++ b/examples/site/widget_list.html
@@ -56,7 +56,7 @@ widget_selected: selected
       <li> <a href="{{site.url}}select_list_examples.html"> Select Lists </a> </li>
       <li> <a href="{{site.url}}swipe_toggle.html"> Swipe Toggle</a></li>
       <li> <a href="{{site.url}}table/table.html"> Flex Table </a> </li>
-      <li> <a href="{{site.url}}tabs/tabs.html"> Tabs </a> </li>
+      <li> <a href="{{site.url}}widgets/tabs.html"> Tabs </a> </li>
       <li> <a href="{{site.url}}widgets/toggler.html"> Toggler </a> </li>
       <li> <a href="{{site.url}}zoom_preview_examples.html"> Zoom Preview </a> </li>
     </ul>
