--- a/examples/site/more.html
+++ b/examples/site/more.html
@@ -19,7 +19,7 @@ more_selected: selected
             Uranium is bundled with xui to make just one javascript file. This makes it perfect for
             mobile devices, where minimizing the amount of data downloaded is key.
             If you want it even lighter, you can make a custom build yourself.
-          </p>
+  				</p>
  
       <h3>Uranium is easy to use</h3>
         <p>No javascript knowledge is necessary to use Uranium.
@@ -44,13 +44,57 @@ more_selected: selected
 
   </div>
   
+  <div>
+    <h2>Who's Behind Uranium?</h2>
+    <div data-ur-set="toggler">
+      <h2 data-ur-toggler-component="button">Sean Jezewski</h2>
+      <div data-ur-toggler-component="content"> 
+        <img src="stylesheets/resources/moov1.JPG"/> 
+        <p class="bio">Sean is the lead architect on Uranium - core design and philosophy.. He's the guy to
+          go to for most Uranium questions.</p>
+      </div>
+    </div>
+    <div data-ur-set="toggler">
+      <h2 data-ur-toggler-component="button">Hampton Catlin</h2>
+      <div data-ur-toggler-component="content"> 
+        <img src="stylesheets/resources/moov4.JPG"/>
+        <p class="bio">Hampton helped with the core design and philosophy of Uranium.</p>
+      </div>
+    </div>
+    <div data-ur-set="toggler">
+      <h2 data-ur-toggler-component="button">Jeff Patzer</h2>
+      <div data-ur-toggler-component="content"> 
+        <img src="stylesheets/resources/moov10.jpg"/>
+        <p class="bio">Jeff created the awesome <a href="{{site.url}}geocode.html">geocode widget</a>,
+          which allows you to reverse-geocode a user's location. The information gained
+          is then used to populate a form.</p>
+      </div>
+    </div>
+    <div data-ur-set="toggler">
+      <h2 data-ur-toggler-component="button">Sam Merry</h2>
+      <div data-ur-toggler-component="content"> 
+        <img src="stylesheets/resources/moov11.jpg"/> 
+        <p class="bio">Sam has also contributed to the <a href="{{site.url}}select_list.html">select list</a> widget.</p>
+      </div>
+    </div>
+    <div data-ur-set="toggler">
+      <h2 data-ur-toggler-component="button">Aaron Leung</h2>
+      <div data-ur-toggler-component="content"> 
+        <img src="stylesheets/resources/moov6.jpg"/> 
+        <p class="bio">Aaron coded the beautiful thing that is <a href="{{site.url}}font-resizer.html">
+          font resizer</a>. It pretty much does what you expect: allows you to easily resize text
+          at the click of a button.</p>
+      </div>
+    </div>
+  </div>
+  
   <div id="">
     <h2>Want to know more?</h2>
     <p>
-      Here's more information on the Uranium project. It's not essential for a beginner, but you may
-      want to check this stuff out if you become more interested in Uranium.
-    </p>
-    
+	    Here's more information on the Uranium project. It's not essential for a beginner, but you may
+	    want to check this stuff out if you become more interested in Uranium.
+		</p>
+		
   </div>
   <div id="general_uranium_info">
     <ul>
