--- a/examples/site/font_resizer.html
+++ b/examples/site/font_resizer.html
@@ -109,15 +109,64 @@ widget_selected: selected
           <p>
         </div>
       </div>
-      <div>
-        <p>More examples of font resizer can be found <a href="{{site.url}}font_resizer_examples.html">here</a>, including:</p>
-        <ul>
-          <li><a href="{{site.url}}font_resizer_examples.html#using_ids">using IDs instead of sets</a></li>
-          <li><a href="{{site.url}}font_resizer_examples.html#overriding">overriding the default settings</a></li>
-          <li><a href="{{site.url}}font_resizer_examples.html#self-sizing">a self-resizing resizer</a></li>
-        </ul>
-      </div>
-  
     </div><!-- wrapper-->
+
+    <div id="lightgrey"></div><!-- hr-->
+    
+    <div class="wrapper">
+    <h2>Further Examples</h2>
+    <h3>Using data-ur-id:</h3>
+      <a name="using_ids"></a>
+      <div class="font_resizer">
+        <span data-ur-id="foo" data-ur-font-resizer-component="increase">[+]</span>
+        <span data-ur-id="foo" data-ur-font-resizer-component="label"></span>
+        <span data-ur-id="foo" data-ur-font-resizer-component="decrease">[-]</span>
+        <p data-ur-id="foo" data-ur-font-resizer-component="content">To be or not to be, that is the question. Whether 'tis nobler in the mind to endure the slings and arrows of outrageous fortune etc etc.</p>
+      </div>
+
+        <div id="lightgrey"></div><!-- hr-->
+
+    <h3>Overriding Defaults</h3>
+    <a name="overriding"></a>
+    <div class="font_resizer">
+      <div data-ur-set="font-resizer">
+        <span data-ur-font-resizer-component="increase">[+]</span>
+        <span data-ur-font-resizer-component="label"></span>
+        <span data-ur-font-resizer-component="decrease">[-]</span>
+        <p data-ur-font-resizer-component="content"
+           data-ur-font-resizer-min="50"
+           data-ur-font-resizer-max="220"
+           data-ur-font-resizer-size="120"
+           data-ur-font-resizer-delta="10">To be or not to be, that is the question. Whether 'tis nobler in the mind to endure the slings and arrows of outrageous fortune etc etc.</p>
+      </div>
+    </div>
+
+        <div id="lightgrey"></div><!-- hr-->
+
+    <h3>A Self-resizing Resizer</h3>
+    <a name="self-sizing"></a>
+    <div class="font_resizer">
+      <div data-ur-set="font-resizer" data-ur-font-resizer-component="content">
+        <span data-ur-font-resizer-component="increase">[+]</span>
+        <span data-ur-font-resizer-component="label"></span>
+        <span data-ur-font-resizer-component="decrease">[-]</span>
+        <p>To be or not to be, that is the question. Whether 'tis nobler in the mind to endure the slings and arrows of outrageous fortune etc etc.</p>
+      </div>
+    </div>
+
+        <div id="lightgrey"></div><!-- hr-->
+
+    <div style="display:none">
+      <h2>A Super-Advanced Example (using the secret "invert" attribute!):</h2>
+      <div class="font_resizer">
+        <div data-ur-set="font-resizer">
+          <span data-ur-font-resizer-component="increase">[+]</span>
+          <span data-ur-font-resizer-component="label"></span>
+          <span data-ur-font-resizer-component="decrease">[-]</span>
+          <p data-ur-font-resizer-component="content" data-ur-font-resizer-delta="10" data-ur-font-resizer-invert="Bam!">To be or not to be, that is the question. Whether 'tis nobler in the mind to endure the slings and arrows of outrageous fortune etc etc.</p>
+        </div>
+      </div>
+    </div>
+    </div> <!--wrapper -->
   </div> <!-- basicpage -->
 </div> <!-- tabs -->
