finish up font resizer

--- a/examples/site/font_resizer.html
+++ b/examples/site/font_resizer.html
@@ -82,6 +82,12 @@ widget_selected: selected
       </div><!-- end of attributes tabs -->
     </div><!-- end of wrapper -->
 
+    <div class='wrapper'>
+        <h2> Required Styles </h2>
+        <p>
+          No styles are required. All styles are handled inline by the widget. 
+        </p>
+      </div>
 
     <div class="wrapper">
       <h2>Demonstration</h2>
@@ -141,7 +147,7 @@ widget_selected: selected
       </div>
     </div>
 
-        <div id="lightgrey"></div><!-- hr-->
+    <div id="lightgrey"></div><!-- hr-->
 
     <h3>A Self-resizing Resizer</h3>
     <a name="self-sizing"></a>
@@ -153,8 +159,6 @@ widget_selected: selected
         <p>To be or not to be, that is the question. Whether 'tis nobler in the mind to endure the slings and arrows of outrageous fortune etc etc.</p>
       </div>
     </div>
-
-        <div id="lightgrey"></div><!-- hr-->
 
     <div style="display:none">
       <h2>A Super-Advanced Example (using the secret "invert" attribute!):</h2>
