--- a/examples/site/widgets/toggler.html
+++ b/examples/site/widgets/toggler.html
@@ -88,7 +88,7 @@ widget_selected: selected
 }
 </pre>      
     </div>
-  </div>
+  </div><!-- wrapper -->
   <div class="wrapper">
     <h2>Demonstration</h2>
     <div class='demonstration' name='Simple'>
