font resizers final tweaks

--- a/examples/site/widget_list.html
+++ b/examples/site/widget_list.html
@@ -48,7 +48,7 @@ widget_selected: selected
       <li> <a href="{{site.url}}geocode.html"> Geocode </a> </li> -->
       
       <li> <a href="{{site.url}}carousel_examples.html"> Carousel </a> </li>
-      <li> <a href="{{site.url}}font_resizer.html"> Font Resizer </a> </li>
+      <li> <a href="{{site.url}}widgets/font_resizer.html"> Font Resizer </a> </li>
       <li> <a href="{{site.url}}geocode.html"> Reverse Geocode </a></li>
       <li> <a href="{{site.url}}lateload.html"> Lateload </a></li>
       <li> <a href="{{site.url}}map_examples.html"> Map </a></li>
