--- a/examples/site/widgets/maps/advanced.html
+++ b/examples/site/widgets/maps/advanced.html
@@ -1,36 +1,53 @@
 ---
-layout: default 
-title: Hidden Map
-name: hidden_map
-example_selected: selected
+layout: map-widget-sub
+title: Advanced Map
+name: advanced_map
+widget_selected: selected
 ---
 <div class="wrapper">
-  <h1> Hidden </h1>
+  <h1> {{page.title}} </h1>
 
   <h2> Description </h2>
   <div class='description'>
     <p>
-    This is a simple map that's hidden initially (but is still loaded automatically). All we do is wrap
-    the map in a <a href="toggler.html">toggler</a>.
+    This map has custom icons and a geolocation button to enable the user's location
     </p>
     <p> Note: If you're testing this locally (off of a file in your
     browser) - then geolocation may not work. Put it in your dropbox
     to play with these features </p>
   </div>
-
+  <h2> Attributes </h2>
+    <div>
+      <p>To use these features, you will need the following attributes.</p>
+      <h3> Geolocation Button </h3>
+      <p>Apply these to the geolocation button</p>
+      <div class='attributes'>
+        <ul>
+          <li><span class="inline_code">data-ur-map-component="user_location"</span>Text</li>
+          <li><span class="inline_code">data-ur-state="enabled"</span></li>
+        </ul>        
+      </div>
+      <h3> Custom Icon </h3>
+      <p>Apply these to a div anywhere in the widget</p>
+      <div class='attributes'>
+        <ul>
+          <li><span class="inline_code">data-ur-map-component="icon"</span></li>
+          <li><span class="inline_code">data-ur-url="image.png"</span></li>
+        </ul>        
+      </div>
+    </div>
   <h2>Demonstration</h2>
-  <div class='test' name='Simple' data-ur-set='toggler'>
+  <div class='test' name='Simple'>
 
-    <span data-ur-toggler-component='button'> Click me to show map </span>
-
-  <div data-ur-toggler-component='content' >
     <div data-ur-set='map'>
       <div data-ur-map-component='user_location'
-      data-ur-state='disabled'> Use My Location!</br></div>        
+      data-ur-state='disabled'>Use My Location!</div>        
 
-      <div data-ur-map-component='icon'
-      data-ur-url='{{site.url}}stylesheets/resources/uraniumicon.png'><img
-      src='{{site.url}}stylesheets/resources/uraniumicon.png'/></div>
+      <div data-ur-map-component='icon' data-ur-url='{{site.url}}stylesheets/resources/uraniumicon.png'>
+
+        <img src='{{site.url}}stylesheets/resources/uraniumicon.png'/>
+        <!-- for preloading the image! -->
+      </div>
       
       <div data-ur-map-component='canvas'></div>
 
@@ -74,12 +91,6 @@ example_selected: selected
         <span> (415) 621-4455 </span>
       </div>        
       
-      </div>
     </div>
   </div>
-</div> <!-- wrapper -->
-<div class="wrapper">
-  <p>
-  <a href="{{site.url}}maps_examples.html">Back to examples of maps.</a>
-  </p>
-</div>
+</div><!-- wrapper -->
