--- a/examples/site/widget_list.html
+++ b/examples/site/widget_list.html
@@ -52,7 +52,7 @@ widget_selected: selected
       <li> <a href="{{site.url}}geocode.html"> Reverse Geocode </a></li>
       <li> <a href="{{site.url}}lateload.html"> Lateload </a></li>
       <li> <a href="{{site.url}}map_examples.html"> Map </a></li>
-      <li> <a href="{{site.url}}select_buttons.html"> Select Buttons </a></li>
+      <li> <a href="{{site.url}}widgets/select_buttons.html"> Select Buttons </a></li>
       <li> <a href="{{site.url}}select_list_examples.html"> Select Lists </a> </li>
       <li> <a href="{{site.url}}swipe_toggle.html"> Swipe Toggle</a></li>
       <li> <a href="{{site.url}}table/table.html"> Flex Table </a> </li>
