--- a/examples/site/widgets/select_list.html
+++ b/examples/site/widgets/select_list.html
@@ -1,5 +1,5 @@
 ---
-layout: default 
+layout: widgets 
 title: Select List
 name: select_list
 widget_selected: selected
@@ -62,6 +62,13 @@ widget_selected: selected
         </div><!-- end of advanced_tab -->
       </div><!-- end of attributes tabs -->
     </div><!-- end of wrapper -->
+
+    <div class='wrapper'>
+      <h2> Required Styles </h2>
+      <p>
+        No styles are required.
+      </p>
+    </div>
 
     <div class="wrapper">
       <h2>Demonstration</h2>
