--- a/examples/correct/select_buttons/select_buttons.html
+++ b/examples/correct/select_buttons/select_buttons.html
@@ -1,3 +1,5 @@
+<!-- Deprecated in favor of the jekyll widget -->
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
