--- a/examples/site/widget_list.html
+++ b/examples/site/widget_list.html
@@ -54,7 +54,7 @@ widget_selected: selected
       <li> <a href="{{site.url}}map_examples.html"> Map </a></li>
       <li> <a href="{{site.url}}widgets/select_buttons.html"> Select Buttons </a></li>
       <li> <a href="{{site.url}}widgets/select_list.html"> Select Lists </a> </li>
-      <li> <a href="{{site.url}}swipe_toggle.html"> Swipe Toggle</a></li>
+      <li> <a href="{{site.url}}widgets/swipe_toggle.html"> Swipe Toggle</a></li>
       <li> <a href="{{site.url}}table/table.html"> Flex Table </a> </li>
       <li> <a href="{{site.url}}widgets/tabs.html"> Tabs </a> </li>
       <li> <a href="{{site.url}}widgets/toggler.html"> Toggler </a> </li>
