add some stubs, use some jekyll niceness for page names

--- a/examples/site/widgets/flex_table.html
+++ b/examples/site/widgets/flex_table.html
@@ -1,7 +1,7 @@
 ---
 layout: widgets
-title: Swipe Toggle
-name: swipe_toggle
+title: Flex Table
+name: flex_table
 widget_selected: selected
 ---
 <div data-ur-set="tabs">
