--- a/examples/site/widgets/maps.html
+++ b/examples/site/widgets/maps.html
@@ -10,7 +10,7 @@ widget_selected: selected
   <div id="babutton" data-ur-tabs-component="button" data-ur-tab-id="basicpage" data-ur-state="enabled">Basic</div>
   <div>
     <div class="wrapper">
-      <h1> Maps </h1>
+      <h1> {{page.title}} </h1>
     </div>
     <div class="description_wrapper">
       <h2>Description</h2>
