--- a/examples/site/widgets/select_buttons.html
+++ b/examples/site/widgets/select_buttons.html
@@ -11,7 +11,7 @@ widget_selected: selected
   
   <div data-ur-tabs-component="content" data-ur-tab-id="basicpage" data-ur-state="enabled">
     <div class="wrapper">
-      <h1> Select Buttons </h1>
+      <h1> {{page.title}} </h1>
     </div>
     <div class="description_wrapper">
       <h2> Description </h2>
