--- a/examples/site/widget_list.html
+++ b/examples/site/widget_list.html
@@ -50,12 +50,12 @@ widget_selected: selected
       <li> <a href="{{site.url}}carousel_examples.html"> Carousel </a> </li>
       <li> <a href="{{site.url}}widgets/font_resizer.html"> Font Resizer </a> </li>
       <li> <a href="{{site.url}}geocode.html"> Reverse Geocode </a></li>
-      <li> <a href="{{site.url}}lateload.html"> Lateload </a></li>
+      <li> <a href="{{site.url}}widgets/lateload.html"> Lateload </a></li>
       <li> <a href="{{site.url}}map_examples.html"> Map </a></li>
       <li> <a href="{{site.url}}widgets/select_buttons.html"> Select Buttons </a></li>
       <li> <a href="{{site.url}}widgets/select_list.html"> Select Lists </a> </li>
       <li> <a href="{{site.url}}widgets/swipe_toggle.html"> Swipe Toggle</a></li>
-      <li> <a href="{{site.url}}table/table.html"> Flex Table </a> </li>
+      <li> <a href="{{site.url}}widgets/flex_table.html"> Flex Table </a> </li>
       <li> <a href="{{site.url}}widgets/tabs.html"> Tabs </a> </li>
       <li> <a href="{{site.url}}widgets/toggler.html"> Toggler </a> </li>
       <li> <a href="{{site.url}}zoom_preview_examples.html"> Zoom Preview </a> </li>
