--- a/examples/site/widgets/lateload.html
+++ b/examples/site/widgets/lateload.html
@@ -1,7 +1,7 @@
 ---
 layout: widgets
-title: Swipe Toggle
-name: swipe_toggle
+title: Late Load
+name: lateload
 widget_selected: selected
 ---
 <div data-ur-set="tabs">
