--- a/examples/site/widgets/select_list.html
+++ b/examples/site/widgets/select_list.html
@@ -11,7 +11,7 @@ widget_selected: selected
   
   <div>
     <div class="wrapper">
-    <h1> Select List </h1>
+      <h1> {{page.title}} </h1>
     </div>
     <div class="description_wrapper">
     <h2> Description</h2>
