--- a/examples/site/widgets/tabs.html
+++ b/examples/site/widgets/tabs.html
@@ -9,7 +9,7 @@ widget_selected: selected
   
   <div id="babutton" data-ur-tabs-component="button" data-ur-tab-id="basicpage" data-ur-state="enabled">Basic</div>
   <div class="wrapper">
-    <h1> Tabs </h1>
+      <h1> {{page.title}} </h1>
   </div>
   <div class="description_wrapper">
     <h2> Description </h2>
