--- a/examples/site/widgets/geocode/button.html
+++ b/examples/site/widgets/geocode/button.html
@@ -1,8 +1,8 @@
 ---
-layout: default 
+layout: geocode-widget-sub 
 title: Geocode Button
 name: geocode_button
-example_selected: selected
+widget_selected: selected
 ---
 <div class="wrapper">
   <h1> Reverse Geocode with a Button </h1>
@@ -336,8 +336,3 @@ function foo(){
     </form>
   </div>
 </div> <!-- wrapper -->
-<div class="wrapper">
-  <p>
-  <a href="{{site.url}}geocode_examples.html">Back to examples of geolocation.</a>
-  </p>
-</div>
