--- a/examples/site/widgets/geocode/text_inputs.html
+++ b/examples/site/widgets/geocode/text_inputs.html
@@ -1,8 +1,8 @@
 ---
-layout: default 
+layout: geocode-widget-sub 
 title: Geocode Text Inputs
 name: geocode_text_inputs
-example_selected: selected
+widget_selected: selected
 ---
 <div class="wrapper">
   <h1> Reverse Geocode with Text Inputs </h1>
@@ -30,8 +30,3 @@ example_selected: selected
     </form>
   </div>
 </div> <!-- wrapper -->
-<div class="wrapper">
-  <p>
-  <a href="{{site.url}}geocode_examples.html">Back to examples of geolocation.</a>
-  </p>
-</div>
