general cleanup of file structure and old examples

--- a/examples/old_style/infinite_carousel_example.html
+++ b/examples/old_style/infinite_carousel_example.html
@@ -3,9 +3,9 @@
   <head>
     <title>Carousel Examples</title>
     <meta name="viewport" content="width=device-width initial-scale=1 maximum-scale=1 user-scalable=0">
-    <script src="../lib/external/xui-2.3.2.js"></script>
-    <script src="../lib/uranium_mixins.js"></script>
-    <script src="../lib/carousel.js"></script>
+    <script src="../../lib/external/xui-2.3.2.js"></script>
+    <script src="../../lib/uranium_mixins.js"></script>
+    <script src="../../lib/carousel.js"></script>
     <style type="text/css">
       body {
         margin: 0px;
@@ -143,25 +143,5 @@
         </div>
       </div>
     </div>
-    <div style="padding: 10px;">
-      You open an account: You, your employer or both can contribute to the account. You can use your HSA anytime to help pay your out-of-pocket health plan expenses, such as your deductible and other qualified medical expenses such as dental and vision.
-       You pay your deductible from the account: Once your account is used up, you pay the rest of the deductible (the amount you’re responsible for) out of your own pocket.
-       Once you’ve met your deductible, you pay your coinsurance: Once your deductible is met, your health plan begins to pay a portion (coinsurance) or all of your expenses until your out-of-pocket maximum is met. How much you pay will depend on your plan.
-       Once you’ve paid the out-of-pocket max, your health plan pays all: Once you reach your out-of-pocket maximum, your health plan pays 100 percent of eligible expenses for the rest of the year. Your out-of-pocket maximum is the most you will pay in any year.
-       If there is no money in your HSA, you pay for services out of pocket until you’ve met your out-of-pocket maximum.
-
-       Manage your account online
-
-       It’s easy to open and manage your account online. After you’ve opened your account, see the account summary area to:
-       You open an account: You, your employer or both can contribute to the account. You can use your HSA anytime to help pay your out-of-pocket health plan expenses, such as your deductible and other qualified medical expenses such as dental and vision.
-        You pay your deductible from the account: Once your account is used up, you pay the rest of the deductible (the amount you’re responsible for) out of your own pocket.
-        Once you’ve met your deductible, you pay your coinsurance: Once your deductible is met, your health plan begins to pay a portion (coinsurance) or all of your expenses until your out-of-pocket maximum is met. How much you pay will depend on your plan.
-        Once you’ve paid the out-of-pocket max, your health plan pays all: Once you reach your out-of-pocket maximum, your health plan pays 100 percent of eligible expenses for the rest of the year. Your out-of-pocket maximum is the most you will pay in any year.
-        If there is no money in your HSA, you pay for services out of pocket until you’ve met your out-of-pocket maximum.
-
-        Manage your account online
-
-        It’s easy to open and manage your account online. After you’ve opened your account, see the account summary area to:
-     </div>
   </body>
 </html>
