--- a/examples/old_style/widget_list.html
+++ b/examples/old_style/widget_list.html
@@ -1,7 +1,7 @@
 <!-- Deprecated in favor of the jekyll template page -->
 
 
-<!-- <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
   <head>
     <title>Widget List</title>
@@ -12,8 +12,7 @@
     <div id="detail">
       <p>Here's a list of examples of widget use</p>
       <ol>
-        <li> <a href="carousel_examples.html"> Carousel </a> </li>
-        <li> <a href="font_resizer_examples.html"> Font Resizer </a> </li>
+        <li> <a href="infinite_carousel_example.html"> Carousel </a> </li>
         <li> <a href="geocode.html"> Reverse Geocode </a></li>
         <li> <a href="lateload.html"> Lateload </a></li>
         <li> <a href="map_examples.html"> Map </a></li>
@@ -27,4 +26,4 @@
       </ol>
     </div>
   </body>
-</html> -->
+</html>
