more layout cleanup

--- a/examples/site/widget_list.html
+++ b/examples/site/widget_list.html
@@ -37,7 +37,7 @@ widget_selected: selected
     
     <h3>Our favorites (and most used)</h3>
     <ul>
-      <li> <a href="{{site.url}}carousel_examples.html"> Carousel </a> </li>
+      <li> <a href="{{site.url}}widgets/carousel.html"> Carousel </a> </li>
       <li> <a href="{{site.url}}widgets/tabs.html"> Tabs </a> </li>
       <li> <a href="{{site.url}}widgets/toggler.html"> Toggler </a> </li>
       <li> <a href="{{site.url}}widgets/geocode.html"> Reverse Geocode </a></li>
