--- a/examples/site/widgets/carousel.html
+++ b/examples/site/widgets/carousel.html
@@ -1,5 +1,5 @@
 ---
-layout: default 
+layout: widgets 
 title: Carousel
 name: carousel
 widget_selected: selected
@@ -25,7 +25,7 @@ widget_selected: selected
       </p>
       <p>
         The compatibility of this with FireFox is ... well, not really there. Check out our
-        <a href="{{site.url}}compatibility.html">compatibility tables</a> to see which devices
+        <a href="{{site.url}}../compatibility.html">compatibility tables</a> to see which devices
         and browsers will display the carousel.
       </p>
     </div>
@@ -148,14 +148,14 @@ widget_selected: selected
               Next
             </div>
             <div data-ur-carousel-component='scroll_container'>
-              <img data-ur-carousel-component='item' src='{{site.url}}images/sample1.png' />
-              <img data-ur-carousel-component='item' src='{{site.url}}images/sample2.png' />
-              <img data-ur-carousel-component='item' src='{{site.url}}images/sample3.png' />
-              <img data-ur-carousel-component='item' src='{{site.url}}images/sample4.png' />
-              <img data-ur-carousel-component='item' src='{{site.url}}images/sample5.png' />
-              <img data-ur-carousel-component='item' src='{{site.url}}images/sample6.png' />
-              <img data-ur-carousel-component='item' src='{{site.url}}images/sample7.png' />
-              <img data-ur-carousel-component='item' src='{{site.url}}images/sample8.png' />
+              <img data-ur-carousel-component='item' src='{{site.url}}../images/sample1.png' />
+              <img data-ur-carousel-component='item' src='{{site.url}}../images/sample2.png' />
+              <img data-ur-carousel-component='item' src='{{site.url}}../images/sample3.png' />
+              <img data-ur-carousel-component='item' src='{{site.url}}../images/sample4.png' />
+              <img data-ur-carousel-component='item' src='{{site.url}}../images/sample5.png' />
+              <img data-ur-carousel-component='item' src='{{site.url}}../images/sample6.png' />
+              <img data-ur-carousel-component='item' src='{{site.url}}../images/sample7.png' />
+              <img data-ur-carousel-component='item' src='{{site.url}}../images/sample8.png' />
             </div>       
           </div>
         </div>   
@@ -202,12 +202,12 @@ widget_selected: selected
       </div>
     </div>
     <div>
-      <p>More examples of the carousel can be found <a href="{{site.url}}carousel_examples.html">here</a>, including:</p>
+      <p>More examples of the carousel can be found <a href="{{site.url}}../carousel_examples.html">here</a>, including:</p>
       <ul>
-        <li><a href="{{site.url}}carousel_examples.html#vertical">vertical scrolling</a></li>
-        <li><a href="{{site.url}}carousel_examples.html#notouch">no touch</a></li>
-        <li><a href="{{site.url}}carousel_examples.html#multipane">multiple items in a pane</a></li>
-        <li><a href="{{site.url}}carousel_examples.html#jumpto">a "jump to" function</a></li>
+        <li><a href="{{site.url}}../carousel_examples.html#vertical">vertical scrolling</a></li>
+        <li><a href="{{site.url}}../carousel_examples.html#notouch">no touch</a></li>
+        <li><a href="{{site.url}}../carousel_examples.html#multipane">multiple items in a pane</a></li>
+        <li><a href="{{site.url}}../carousel_examples.html#jumpto">a "jump to" function</a></li>
       </ul>
     </div>
   </div> <!-- demonstration wrapper -->
@@ -236,14 +236,14 @@ widget_selected: selected
           Next
         </div>
         <div data-ur-carousel-component='scroll_container'>
-          <img data-ur-carousel-component='item' src='{{site.url}}images/sample1.png' />
-          <img data-ur-carousel-component='item' src='{{site.url}}images/sample2.png' />
-          <img data-ur-carousel-component='item' src='{{site.url}}images/sample3.png' />
-          <img data-ur-carousel-component='item' src='{{site.url}}images/sample4.png' />
-          <img data-ur-carousel-component='item' src='{{site.url}}images/sample5.png' />
-          <img data-ur-carousel-component='item' src='{{site.url}}images/sample6.png' />
-          <img data-ur-carousel-component='item' src='{{site.url}}images/sample7.png' />
-          <img data-ur-carousel-component='item' src='{{site.url}}images/sample8.png' />
+          <img data-ur-carousel-component='item' src='{{site.url}}../images/sample1.png' />
+          <img data-ur-carousel-component='item' src='{{site.url}}../images/sample2.png' />
+          <img data-ur-carousel-component='item' src='{{site.url}}../images/sample3.png' />
+          <img data-ur-carousel-component='item' src='{{site.url}}../images/sample4.png' />
+          <img data-ur-carousel-component='item' src='{{site.url}}../images/sample5.png' />
+          <img data-ur-carousel-component='item' src='{{site.url}}../images/sample6.png' />
+          <img data-ur-carousel-component='item' src='{{site.url}}../images/sample7.png' />
+          <img data-ur-carousel-component='item' src='{{site.url}}../images/sample8.png' />
         </div>       
       </div>
     </div>
@@ -268,14 +268,14 @@ widget_selected: selected
           Next
         </div>
         <div data-ur-carousel-component='scroll_container'>
-          <img data-ur-carousel-component='item' src='{{site.url}}images/sample1.png' />
-          <img data-ur-carousel-component='item' src='{{site.url}}images/sample2.png' />
-          <img data-ur-carousel-component='item' src='{{site.url}}images/sample3.png' />
-          <img data-ur-carousel-component='item' src='{{site.url}}images/sample4.png' />
-          <img data-ur-carousel-component='item' src='{{site.url}}images/sample5.png' />
-          <img data-ur-carousel-component='item' src='{{site.url}}images/sample6.png' />
-          <img data-ur-carousel-component='item' src='{{site.url}}images/sample7.png' />
-          <img data-ur-carousel-component='item' src='{{site.url}}images/sample8.png' />
+          <img data-ur-carousel-component='item' src='{{site.url}}../images/sample1.png' />
+          <img data-ur-carousel-component='item' src='{{site.url}}../images/sample2.png' />
+          <img data-ur-carousel-component='item' src='{{site.url}}../images/sample3.png' />
+          <img data-ur-carousel-component='item' src='{{site.url}}../images/sample4.png' />
+          <img data-ur-carousel-component='item' src='{{site.url}}../images/sample5.png' />
+          <img data-ur-carousel-component='item' src='{{site.url}}../images/sample6.png' />
+          <img data-ur-carousel-component='item' src='{{site.url}}../images/sample7.png' />
+          <img data-ur-carousel-component='item' src='{{site.url}}../images/sample8.png' />
         </div>       
       </div>
     </div>
@@ -304,14 +304,14 @@ widget_selected: selected
           Next
         </div>
         <div data-ur-carousel-component='scroll_container'>
-          <img data-ur-carousel-component='item' src='{{site.url}}images/sample1.png' />
-          <img data-ur-carousel-component='item' src='{{site.url}}images/sample2.png' />
-          <img data-ur-carousel-component='item' src='{{site.url}}images/sample3.png' />
-          <img data-ur-carousel-component='item' src='{{site.url}}images/sample4.png' />
-          <img data-ur-carousel-component='item' src='{{site.url}}images/sample5.png' />
-          <img data-ur-carousel-component='item' src='{{site.url}}images/sample6.png' />
-          <img data-ur-carousel-component='item' src='{{site.url}}images/sample7.png' />
-          <img data-ur-carousel-component='item' src='{{site.url}}images/sample8.png' />
+          <img data-ur-carousel-component='item' src='{{site.url}}../images/sample1.png' />
+          <img data-ur-carousel-component='item' src='{{site.url}}../images/sample2.png' />
+          <img data-ur-carousel-component='item' src='{{site.url}}../images/sample3.png' />
+          <img data-ur-carousel-component='item' src='{{site.url}}../images/sample4.png' />
+          <img data-ur-carousel-component='item' src='{{site.url}}../images/sample5.png' />
+          <img data-ur-carousel-component='item' src='{{site.url}}../images/sample6.png' />
+          <img data-ur-carousel-component='item' src='{{site.url}}../images/sample7.png' />
+          <img data-ur-carousel-component='item' src='{{site.url}}../images/sample8.png' />
         </div>       
       </div>
     </div>
@@ -358,14 +358,14 @@ widget_selected: selected
           Next
         </div>
         <div data-ur-carousel-component='scroll_container'>
-          <img data-ur-carousel-component='item' src='{{site.url}}images/sample1.png' />
-          <img data-ur-carousel-component='item' src='{{site.url}}images/sample2.png' />
-          <img data-ur-carousel-component='item' src='{{site.url}}images/sample3.png' />
-          <img data-ur-carousel-component='item' src='{{site.url}}images/sample4.png' />
-          <img data-ur-carousel-component='item' src='{{site.url}}images/sample5.png' />
-          <img data-ur-carousel-component='item' src='{{site.url}}images/sample6.png' />
-          <img data-ur-carousel-component='item' src='{{site.url}}images/sample7.png' />
-          <img data-ur-carousel-component='item' src='{{site.url}}images/sample8.png' />
+          <img data-ur-carousel-component='item' src='{{site.url}}../images/sample1.png' />
+          <img data-ur-carousel-component='item' src='{{site.url}}../images/sample2.png' />
+          <img data-ur-carousel-component='item' src='{{site.url}}../images/sample3.png' />
+          <img data-ur-carousel-component='item' src='{{site.url}}../images/sample4.png' />
+          <img data-ur-carousel-component='item' src='{{site.url}}../images/sample5.png' />
+          <img data-ur-carousel-component='item' src='{{site.url}}../images/sample6.png' />
+          <img data-ur-carousel-component='item' src='{{site.url}}../images/sample7.png' />
+          <img data-ur-carousel-component='item' src='{{site.url}}../images/sample8.png' />
         </div>       
       </div>
     </div>
