fix js error in example

--- a/examples/site/widgets/carousel.html
+++ b/examples/site/widgets/carousel.html
@@ -54,7 +54,7 @@ widget_selected: selected
           <h4> Required </h4>
           <p>
             <ul>
-              <li><div data-ur-toggler-component="button" class="inline_code">"view_container"</div>
+              <li><div class="inline_code">"view_container"</div>
                 <ul>
                   <li>this div should wrap the whole carousel; it must be set to no overflow.</li>
                   <li>multiple?: false</li>
@@ -68,14 +68,14 @@ widget_selected: selected
                   </li>
                 </ul>
               </li>
-              <li><div data-ur-toggler-component="button" class="inline_code">"scroll_container"</div>
+              <li><div class="inline_code">"scroll_container"</div>
                 <ul>
                   <li>this div should wrap the scrolling items on the carousel</li>
                   <li>multiple?: false</li>
                   <li>state: N/A</li>
                 </ul>
               </li>
-              <li><div data-ur-toggler-component="button" class="inline_code">"item"</div>
+              <li><div class="inline_code">"item"</div>
                 <ul>
                   <li>this attribute is for each item that needs to be displayed in the carousel</li>
                   <li>multiple?: true</li>
@@ -88,7 +88,7 @@ widget_selected: selected
           <h4> Optional </h4>
           <p>
             <ul>
-              <li><div data-ur-toggler-component="button" class="inline_code">"button"</div>
+              <li><div class="inline_code">"button"</div>
                 <ul>
                   <li>indicates the previous and next buttons</li>
                   <li>multiple?: true</li>
@@ -100,7 +100,7 @@ widget_selected: selected
                   </li>
                 </ul>
               </li>
-              <li><div data-ur-toggler-component="button" class="inline_code">"count"</div>
+              <li><div class="inline_code">"count"</div>
                 <ul>
                   <li>gives an indicator of the position of the carousel, in the form "1 of 8", etc.</li>
                   <li>multiple?: false</li>
