update geocode with an faq section

--- a/examples/site/widgets/geocode.html
+++ b/examples/site/widgets/geocode.html
@@ -465,12 +465,22 @@ widget_selected: selected
     </div>
   </div>
 </div> <!-- demonstration wrapper -->
+
 <div id="lightgrey"></div><!-- hr-->
 <div class="wrapper">
 <h2>Further Examples</h2>
   <h3><a href="{{site.url}}geocode/button.html">Activating the Geolocator with a Button</a></h3>
   <h3><a href="{{site.url}}geocode/text_inputs.html">Populate Text Inputs Instead of Select Elements</a></h3>
+</div>
+
+<div id="lightgrey"></div><!-- hr-->
+<div class="wrapper">
+<h2>FAQ's</h2>
+
+  <p><i>Does the browser always have to ask for a user to share their location?</i></p>
+  <p>Yes. Its a security feature of all browsers.</p>
   
 </div>
+
   </div>
 </div> <!-- tabs -->
