--- a/examples/site/widgets/toggler.html
+++ b/examples/site/widgets/toggler.html
@@ -91,7 +91,67 @@ widget_selected: selected
   </div><!-- wrapper -->
   <div class="wrapper">
     <h2>Demonstration</h2>
-    <div class='demonstration' name='Simple'>
+    <div class='demonstration' name='Simple'>body#carousel_page
+  div
+    &[data-ur-carousel-component='view_container']
+      height: 270px
+      width: 100%
+      overflow-x: hidden
+      border: 1px solid black
+      background: #FFD700 url('resources/largeshade.png') no-repeat left bottom
+    &[data-ur-carousel-component="scroll_container"]
+      display: inline-block
+      img
+        display: block
+        float: left
+      // This is important -- otherwise, the carousel can't calculate the accurate total width
+      // background-color: #3CC;
+    &[data-ur-carousel-component="button"]
+      display: inline-block
+      &[data-ur-state="disabled"]
+        opacity: 0.3
+
+  // Non essential styling
+
+
+  div[name='Three'] img
+    width: 62px !important
+    // on iphone without the important, it doesn't work!!
+    height: 62px
+
+body#carousel_examples_page
+  div
+    &[data-ur-carousel-component='view_container']
+      height: 300px
+      width: 100%
+      overflow-x: hidden
+      border: 1px solid black
+      background: #FFD700 url('resources/largeshade.png') no-repeat left bottom
+    &[data-ur-carousel-component="scroll_container"]
+      display: block
+      > *
+        display: inline-block
+        float: left
+        // This is important -- otherwise, the carousel can't calculate the accurate total width
+        // background-color: #3CC;
+    &[data-ur-carousel-component="button"]
+      display: inline-block
+      &[data-ur-state="disabled"]
+        opacity: 0.3
+
+  // Non essential styling
+
+
+  div[name='Three'] img
+    width: 250px !important
+    // on iphone without the important, it doesn't work!!
+    height: 250px
+
+  div.fixed_width
+    width: 500px
+    -webkit-border-radius: 5px
+    -moz-border-radius: 5px
+    border-radius: 5px
       <div class="description">
         <p>
         We have one button ("Click Here!"). When we click on it, we want the content 
