--- a/examples/site/widget_list.html
+++ b/examples/site/widget_list.html
@@ -47,12 +47,13 @@ widget_selected: selected
     <ul>
       <li> <a href="{{site.url}}widgets/maps.html"> Map </a></li>
       <li> <a href="{{site.url}}widgets/swipe_toggle.html"> Swipe Toggle</a></li>
-      <li><a href="{{site.url}}widgets/zoom_preview.html"> Zoom Preview </a> :: <a href="{{site.url}}widgets/zoom_preview_deprecated.html"> Deprecated Version </a></li>
+      <li> <a href="{{site.url}}widgets/zoom_preview.html"> Zoom Preview </a> :: <a href="{{site.url}}widgets/zoom_preview_deprecated.html"> Deprecated Version </a></li>
       <li> <a href="{{site.url}}widgets/font_resizer.html"> Font Resizer </a> </li>
       <li> <a href="{{site.url}}widgets/lateload.html"> Lateload </a></li>
       <li> <a href="{{site.url}}widgets/select_buttons.html"> Select Buttons </a></li>
       <li> <a href="{{site.url}}widgets/select_list.html"> Select Lists </a> </li>
       <li> <a href="{{site.url}}widgets/flex_table.html"> Flex Table </a> </li>
+      <li> <a href="{{site.url}}widgets/input_clear.html"> Input Clear </a> </li>
     </ul>
   </div>
   
